--- a/Widget Test/app/src/main/res/values/strings.xml
+++ b/Widget Test/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="add_widget">Add widget</string>
 
     <string name="text_header">IS THIS ELI MANNING\'S LAST GAME WITH THE GIANTS?</string>
+    <string name="text_image_footer">WHO IS YOUR MVP THIS YEAR?</string>
 </resources>
